css/main.scss
/* ... */
	body.is-loading {
		#banner {
			h2 {
				@include vendor('transform', 'scale(0.95)');
				opacity: 0;

				&:before, &:after {
					width: 0;
				}
			}

			.more {
				@include vendor('transform', 'translateY(8.5em)');
				opacity: 0;
			}

			&:after {
				opacity: 1;
			}
		}
	}

/* CTA */

	#cta {
		.inner {
			@include vendor('display', 'flex');
			max-width: 45em;

			header {
				@include vendor('order', '1');
				padding-right: 3em;
				width: 70%;

				p {
					color: inherit;
				}
			}

			.actions {
				@include vendor('order', '2');
				width: 30%;
			}

			@include breakpoint(medium) {
				display: block;
				text-align: center;

				header {
					padding-right: 0;
					width: 100%;
				}

				.actions {
					margin-left: auto;
					margin-right: auto;
					max-width: 20em;
					width: 100%;
				}
			}

			@include breakpoint(small) {
				.actions {
					max-width: none;
				}
			}
		}
	}

/* Main */

	#main {
		> header {
			@include padding(12em, 0);
			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/bg1.jpg")'));
			background-attachment: fixed;
			background-position: center center;
			background-repeat: no-repeat;
			background-size: cover;
			text-align: center;
			&.bg2 {
  			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/bg2.jpg")'));
			}
			&.bg3 {
  			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/bg3.jpg")'));
			}

			h2 {
				font-size: 1.75em;
				margin: 0 0 (_size(element-margin) * 0.25) 0;
			}

			p {
				color: inherit;
				letter-spacing: _size(letter-spacing-alt);
				text-transform: uppercase;
				top: 0;

				a {
					color: inherit;
				}
			}

			@include breakpoint(xlarge) {
				@include padding(10em, 0);
			}

			@include breakpoint(large) {
				@include padding(8em, 3em);
			}

			@include breakpoint(medium) {
				@include padding(10em, 3em);
			}

			@include breakpoint(small) {
				@include padding(5em, 3em);

				h2 {
					font-size: 1.25em;
					margin: 0 0 (_size(element-margin) * 0.5) 0;
				}
			}
		}
	}

	body.is-mobile {
		#main {
			> header {
				background-attachment: scroll;
			}
		}
	}

/* Footer */

	#footer {
		@include padding(6em, 0);
		background-color: darken(_palette(bg), 8);
		text-align: center;

		.icons {
			font-size: 1.25em;

			a {
				color: _palette(fg-light);

				&:hover {
					color: _palette(fg);
				}
			}
		}

		.copyright {
			color: _palette(fg-light);
			font-size: 0.8em;
			letter-spacing: _size(letter-spacing-alt);
			list-style: none;
			padding: 0;
			text-transform: uppercase;

			li {
				border-left: solid 1px _palette(fg-light);
				display: inline-block;
				line-height: 1em;
				margin-left: 1em;
				padding-left: 1em;

				&:first-child {
					border-left: 0;
					margin-left: 0;
					padding-left: 0;
				}

				a {
					color: inherit;

					&:hover {
						color: _palette(fg);
					}
				}

				@include breakpoint(xsmall) {
					border: 0;
					display: block;
					line-height: 1.65em;
					margin: 0;
					padding: 0.5em 0;
				}
			}
		}

		@include breakpoint(medium) {
			@include padding(4em, 3em);
		}

		@include breakpoint(small) {
			@include padding(3em, 2em);
		}
	}

/* Landing */

	body.landing {
		#page-wrapper {
//			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/bg1.jpg")'));
			background-attachment: fixed;
			background-position: center center;
			background-repeat: no-repeat;
			background-size: cover;
			padding-top: 0;
		}
		&.landing_2 #page-wrapper {
//			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/bg2.jpg")'));
		}
		&.landing_3 #page-wrapper {
//			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/bg3.jpg")'));
		}

		#footer {
			background-color: darken(transparentize(_palette(bg), 0.1), 8);
		}
	}

	body.is-mobile {
		&.landing {
			#page-wrapper {
				background: none;
			}

			#banner,
			.wrapper.style4 {
//				@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/bg1.jpg")'));
				background-position: center center;
				background-repeat: no-repeat;
				background-size: cover;
			}
			&.landing_2 {
			  #banner,
  			.wrapper.style4 {
//  				@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/bg2.jpg")'));
  			}
			}
			&.landing_3 {
			  #banner,
  			.wrapper.style4 {
//  				@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/bg3.jpg")'));
  			}
			}

			#footer {
				background-color: darken(_palette(bg), 8);
			}
		}
	}

  @keyFrames imageFade {
    0% { opacity: 1.0; }
    30% { opacity: 1.0; }
    36% { opacity: 0.0; }
    94% { opacity: 0.0; }
    100% { opacity: 1.0; }
  }
  
  .backpic {
    position: fixed; 
    top: 0; 
    left: 0; 
    right: 0; 
    bottom: 0; 
    background-attachment: fixed; 
    background-position: center center; 
    background-repeat: no-repeat; 
    background-size: cover;
    z-index: -1;
    animation: imageFade 30s linear infinite 10s;
    &#back1 {
      background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url("/images/bg1.jpg"); 
      animation-delay: 30s;
      opacity: 1;
      
    }
    &#back2 {
      background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url("/images/bg2.jpg"); 
      animation-delay: 20s;
      opacity: 1;
    }
    &#back3 {
      background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url("/images/bg3.jpg"); 
      opacity: 1;
    }
  }
/* ... */

